option java_package = "com.chuangyou.common.protobuf.pb.soul";
option java_outer_classname = "FuseSkillProto";

message FuseSkillMsg{
	required int32 fuseSkillId = 1; //技能ID
	required int32 color = 2;//技有品质（2：绿  3：蓝  4：紫  5：橙）
	optional int64 fuseCreateTime = 3;//技能开始时间
	optional int32 index = 4;//服务器内部通信用的字段（客户端忽略）
}